Fix vault deployment order and add vault-configuration component for proper Vault setup

--- a/components/vault-secrets-operator/secret-store.yaml
+++ b/components/vault-secrets-operator/secret-store.yaml
@@ -1,32 +1,4 @@
 ---
-apiVersion: secrets.hashicorp.com/v1beta1
-kind: VaultAuth
-metadata:
-  name: kubernetes
-  namespace: vault-secrets-system
-  annotations:
-    argocd.argoproj.io/sync-wave: "5"
-spec:
-  method: kubernetes
-  kubernetes:
-    role: vault-secrets-operator
-    serviceAccount:
-      name: vault-secrets-operator
-      namespace: vault-secrets-system
-    mountPath: /v1/auth/kubernetes
----
-apiVersion: secrets.hashicorp.com/v1beta1
-kind: VaultStaticSecret
-metadata:
-  name: example-secret
-  namespace: vault-secrets-system
-  annotations:
-    argocd.argoproj.io/sync-wave: "6"
-spec:
-  type: kv-v2
-  mount: secret
-  path: example
-  refreshAfter: 15s
-  secretName: example-secret
-  hvs:
-    vaultAuthRef: kubernetes
+# This file will be populated with Vault resources after the operator is fully installed
+# VaultAuth and VaultStaticSecret resources require the operator CRDs to be available first
+# These resources should be deployed in a separate configuration component
