--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -231,6 +231,18 @@ applications:
     syncOptions:
     - CreateNamespace=true
     
+  vault-configuration:
+    enabled: true
+    labels:
+      component: security
+      phase: advanced
+    source:
+      path: components/vault-configuration
+    destination:
+      namespace: vault-secrets-system
+    syncOptions:
+    - CreateNamespace=true
+    
   # kube-ops-view:
   #   enabled: false  # Cluster visualization - enable if needed
   #   labels:
