Fix operator group to allow AllNamespaces install mode for vault-secrets-operator

--- a/components/vault-secrets-operator/operator-group.yaml
+++ b/components/vault-secrets-operator/operator-group.yaml
@@ -7,5 +7,4 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
-  targetNamespaces:
-  - vault-secrets-system
+  targetNamespaces: []  # Empty array allows AllNamespaces install mode
