Fix subscription source to use certified-operators catalog for vault-secrets-operator

--- a/components/vault-secrets-operator/subscription.yaml
+++ b/components/vault-secrets-operator/subscription.yaml
@@ -10,5 +10,5 @@ spec:
   channel: stable
   installPlanApproval: Automatic
   name: vault-secrets-operator
-  source: redhat-operators
+  source: certified-operators
   sourceNamespace: openshift-marketplace
