--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -219,6 +219,16 @@ applications:
     syncOptions:
     - CreateNamespace=true
 
+  vault-rbac:
+    enabled: true
+    labels:
+      component: security
+      phase: advanced
+    source:
+      path: components/vault-rbac
+    syncOptions:
+    - CreateNamespace=true
+    
   vault-secrets-operator:
     enabled: true
     labels:
