--- a/components/vault-deployment/configmap.yaml
+++ b/components/vault-deployment/configmap.yaml
@@ -22,6 +22,6 @@ data:
       },
       "ui": true,
       "disable_mlock": true,
-      "api_addr": "https://vault-ui-vault-system.apps.ocp2.kohlerco.com",
-      "cluster_addr": "https://vault.vault-system.svc:8201"
+      "api_addr": "http://vault-ui-vault-system.apps.ocp2.kohlerco.com",
+      "cluster_addr": "http://vault.vault-system.svc:8201"
     }
