--- a/components/vault-deployment/deployment.yaml
+++ b/components/vault-deployment/deployment.yaml
@@ -31,7 +31,7 @@ spec:
 
       containers:
       - name: vault
-        image: hashicorp/vault:1.15.2
+        image: registry.connect.redhat.com/hashicorp/vault:1.15.2
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -52,6 +52,12 @@ spec:
           value: "true"
         - name: VAULT_CACERT
           value: ""
+        - name: VAULT_DISABLE_MLOCK
+          value: "true"
+        - name: VAULT_DISABLE_CLUSTERING
+          value: "true"
+        - name: VAULT_DISABLE_PERMISSIONS
+          value: "true"
         volumeMounts:
         - name: vault-config
           mountPath: /vault/config
