--- a/components/oauth-configuration/vault-static-secret.yaml
+++ b/components/oauth-configuration/vault-static-secret.yaml
@@ -16,6 +16,9 @@ spec:
   mount: cluster-secrets
   path: openid-client-secret-azuread
   refreshAfter: 1h
-  secretName: openid-client-secret-azuread
-  hvs:
-    vaultConnectionRef: oauth-vault-connection
+  destination:
+    create: true
+    name: openid-client-secret-azuread
+    namespace: openshift-config
+  vaultConnectionRef: oauth-vault-connection
+  vaultAuthRef: oauth-kubernetes-auth
