--- a/components/oauth-configuration/oauth-cluster-config.yaml
+++ b/components/oauth-configuration/oauth-cluster-config.yaml
@@ -17,9 +17,12 @@ spec:
         - name
         preferredUsername:
         - upn
-      clientID: 667e7b9c-e03e-4967-a9fd-953fef9cbce6
+        groups:
+        - groups
+      clientID: 8bc87509-6d01-4739-b120-e84019342d66
       clientSecret:
         name: openid-client-secret-azuread
-      extraScopes: []
+      extraScopes:
+      - groups
       issuer: https://login.microsoftonline.com/5d2d3f03-286e-4643-8f5b-10565608e5f8
     type: OpenID
