Update Azure AD client secret to use new ocp-azuread-auth application

--- a/components/oauth-configuration/vault-static-secret.yaml
+++ b/components/oauth-configuration/vault-static-secret.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   type: kv-v2
   mount: cluster-secrets
-  path: openid-client-secret-azuread
+  path: ocp-azuread-auth
   refreshAfter: 1h
   destination:
     create: true
