Add Group Sync Operator component for Azure AD group synchronization

--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -253,6 +253,18 @@ applications:
     syncOptions:
     - CreateNamespace=true
     
+  group-sync-operator:
+    enabled: true
+    labels:
+      component: authentication
+      phase: advanced
+    source:
+      path: components/group-sync-operator
+    destination:
+      namespace: group-sync-operator
+    syncOptions:
+    - CreateNamespace=true
+    
   # kube-ops-view:
   #   enabled: false  # Cluster visualization - enable if needed
   #   labels:
