--- a/components/oauth-configuration/vault-static-secret.yaml
+++ b/components/oauth-configuration/vault-static-secret.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   type: kv-v2
   mount: cluster-secrets
-  path: ocp-azuread-auth
+  path: aro-auth
   refreshAfter: 1h
   destination:
     create: true
