Update Group Sync Operator to use Red Hat Community of Practice source and version 0.0.36

--- a/components/group-sync-operator/subscription.yaml
+++ b/components/group-sync-operator/subscription.yaml
@@ -14,5 +14,6 @@ spec:
   channel: stable
   installPlanApproval: Automatic
   name: group-sync-operator
-  source: redhat-operators
+  source: redhat-community-operators
   sourceNamespace: openshift-marketplace
+  startingCSV: group-sync-operator.v0.0.36
