--- a/components/group-sync-operator/subscription.yaml
+++ b/components/group-sync-operator/subscription.yaml
@@ -14,6 +14,6 @@ spec:
   channel: stable
   installPlanApproval: Automatic
   name: group-sync-operator
-  source: redhat-community-operators
+  source: community-operators
   sourceNamespace: openshift-marketplace
   startingCSV: group-sync-operator.v0.0.36
