Temporarily remove GroupSync resource to allow operator installation first

--- a/components/group-sync-operator/kustomization.yaml
+++ b/components/group-sync-operator/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - ./operator-group.yaml
   - ./subscription.yaml
   - ./azure-ad-credentials-secret.yaml
-  - ./azure-ad-groupsync.yaml
+  # Temporarily commented out to allow operator installation first
+  # - ./azure-ad-groupsync.yaml
