Re-enable GroupSync resource now that operator is installed

--- a/components/group-sync-operator/kustomization.yaml
+++ b/components/group-sync-operator/kustomization.yaml
@@ -8,5 +8,4 @@ resources:
   - ./operator-group.yaml
   - ./subscription.yaml
   - ./azure-ad-credentials-secret.yaml
-  # Temporarily commented out to allow operator installation first
-  # - ./azure-ad-groupsync.yaml
+  - ./azure-ad-groupsync.yaml
