--- a/components/vault-deployment/configmap.yaml
+++ b/components/vault-deployment/configmap.yaml
@@ -22,7 +22,5 @@ data:
       },
       "ui": true,
       "disable_mlock": true,
-      "disable_clustering": true,
-      "api_addr": "http://vault-ui-vault-system.apps.ocp2.kohlerco.com",
-      "cluster_addr": "http://vault.vault-system.svc:8201"
+      "disable_clustering": true
     }
