--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -265,6 +265,17 @@ applications:
     syncOptions:
     - CreateNamespace=true
     
+    vault:
+      enabled: true
+      labels:
+        component: security
+        phase: platform
+      source:
+        path: platform/vault
+      destination:
+        namespace: vault
+      syncOptions:
+      - CreateNamespace=true
   # kube-ops-view:
   #   enabled: false  # Cluster visualization - enable if needed
   #   labels:
