--- a/components/external-secrets/vault-secret-store.yaml
+++ b/components/external-secrets/vault-secret-store.yaml
@@ -23,6 +23,27 @@ spec:
             name: "external-secrets-operator"
             namespace: "external-secrets-system"
 ---
+# ClusterSecretStore for Vault mount `apps` (for application secrets)
+apiVersion: external-secrets.io/v1beta1
+kind: ClusterSecretStore
+metadata:
+  name: vault-apps-store
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
+spec:
+  provider:
+    vault:
+      server: "https://vault.vault-system.svc.cluster.local:8200"
+      path: "apps"
+      version: "v2"
+      auth:
+        kubernetes:
+          mountPath: "kubernetes"
+          role: "external-secrets-operator"
+          serviceAccountRef:
+            name: "external-secrets-operator"
+            namespace: "external-secrets-system"
+---
 # SecretStore for openshift-config namespace
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
