Fix securityContext fsGroup placement in vault deployment

--- a/components/vault/vault-deployment.yaml
+++ b/components/vault/vault-deployment.yaml
@@ -66,10 +66,11 @@ spec:
           runAsNonRoot: true
           runAsUser: 10001
           runAsGroup: 10001
-          fsGroup: 10001
           allowPrivilegeEscalation: false
           capabilities:
             drop: ["ALL"]
+      securityContext:
+        fsGroup: 10001
       volumes:
       - name: vault-config
         configMap:
