--- a/components/vault/vault-configmap.yaml
+++ b/components/vault/vault-configmap.yaml
@@ -22,5 +22,7 @@ data:
       },
       "ui": true,
       "disable_mlock": true,
-      "log_level": "info"
+      "log_level": "info",
+      "api_addr": "http://0.0.0.0:8200",
+      "cluster_addr": "http://0.0.0.0:8201"
     }
