--- a/components/vault/vault-deployment.yaml
+++ b/components/vault/vault-deployment.yaml
@@ -34,6 +34,7 @@ spec:
         volumeMounts:
         - name: vault-config
           mountPath: /vault/config
+          readOnly: true
         - name: vault-data
           mountPath: /vault/file
         - name: vault-logs
@@ -59,11 +60,7 @@ spec:
             memory: 2Gi
         securityContext:
           runAsNonRoot: true
-          runAsUser: 1000810000
-          runAsGroup: 1000810000
           allowPrivilegeEscalation: false
-          capabilities:
-            drop: ["ALL"]
 
       volumes:
       - name: vault-config
