--- a/components/vault/kustomization.yaml
+++ b/components/vault/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - vault-service.yaml
   - vault-configmap.yaml
   - vault-rbac.yaml
+  - vault-route.yaml
 
 commonLabels:
   app.kubernetes.io/name: vault
